Optimize sbt build: --error flag, 8GB heap, more module opens